fix: main screen shadow and spacing

--- a/src/components/sections/MainInfo/styles.module.css
+++ b/src/components/sections/MainInfo/styles.module.css
@@ -5,11 +5,11 @@
     top:0;
 }
 .shadow{
-    bottom: 0;
+    bottom:0%;
 }
 @media (min-width: 1025px) {
     .text {
-        width: 65%;
+        width: 70%;
         position:absolute;
         margin-bottom: 0;
         bottom: 27%;
@@ -22,17 +22,23 @@
         top:-6.5rem;
     }
     .shadow{
-        bottom: 15%;
+        bottom:20%;
     }
 }
-@media (min-width: 1440px) {
+@media (max-height: 700px) and (min-width: 1025px){
     .shadow{
-        bottom: 18%;
+        bottom:0%;
+    }
+    .text {
+        bottom: 23%;
     }
 }
-@media (min-width: 1580px) {
+@media (max-height: 800px) and (min-width: 1025px){
     .shadow{
-        bottom: 22%;
+        bottom:15%;
+    }
+    .text {
+        bottom: 23%;
     }
 }
 .buttonText {
